<resources>
    <string name="app_name">Event Search</string>
    <string name="tab_text_1">SEARCH</string>
    <string name="tab_text_2">FAVOURITE</string>
    <string name="event_tab_text1">EVENT</string>
    <string name="event_tab_text2">ARTIST(S)</string>
    <string name="event_tab_text3">VENUE</string>
    <string name="event_tab_text4">UPCOMING</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="keywordLabel">Keyword</string>
    <string name="categoryLabel">Category</string>
    <string name="distanceLabel">Distance</string>
    <string name="fromLabel">From</string>
    <string name="keywordHint">Enter keyword</string>
    <string name="distanceHint">10</string>
    <string name="locationHint">Type in the Location</string>
    <string name="searchButtonText">Search</string>
    <string name="clearButtonText">Clear</string>
    <string-array name="categoryValues">
        <item>All</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Arts &amp; Theatre</item>
        <item>Film</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="distanceValues">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="category_types">
        <item>Default</item>
        <item>Event Name</item>
        <item>Time</item>
        <item>Artist</item>
        <item>Type</item>
    </string-array>
    <string-array name="sorting_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="current_location">Current Location</string>
    <string name="Other_location">Other. Specify Location</string>
    <string name="other_typeLocationHint">Type in the Location</string>
    <string name="errorMessage">Please enter mandatory field</string>
    <string name="favourite">Favourite</string>
    <string name="icon">Icon</string>
    <string name="actionBarName_Search">Search Results</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>


