<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/keywordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keywordLabel" />

        <TextView
            android:id="@+id/errorKeyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/error"
            android:text="@string/errorMessage"/>

        <AutoCompleteTextView
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/keywordHint"/>

        <TextView
            android:id="@+id/categoryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoryLabel" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/categoryValues"/>

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distanceLabel" />

        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/distanceHint"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/distanceUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/distanceValues"/>

        <TextView
            android:id="@+id/fromLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromLabel" />
        <RadioGroup
            android:id="@+id/radio_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="277dp">

            <RadioButton
                android:id="@+id/radio_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/current_location" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Other_location" />
        </RadioGroup>

        <TextView
            android:id="@+id/errorLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorMessage"
            android:visibility="gone"
            android:textColor="@color/error"/>

        <EditText
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="30dp"
            android:hint="@string/other_typeLocationHint"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/search"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/searchButtonText" />

            <Button
                android:id="@+id/clear"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/clearButtonText" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>